--- a/css/keyframe.css
+++ b/css/keyframe.css
@@ -26,6 +26,7 @@
 #banner img{
     max-width: 100%;
     opacity: 0;
+     animation-fill-mode: forwards;  /*마지막 프레임에서 멈춤 */
 }
 .container{
     width: var(--content);
@@ -41,13 +42,23 @@
     top: 50%;
     width: 39%;
     z-index: 100;
+    animation-name: leftright;
+    animation-delay: 3s;
+    animation-duration: 0.5s;
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .left .text0{
     top: 26%;
     right: 18%;
+    animation-name: cloud;
+    animation-delay: 2s;
+    animation-duration: 1s;
+    
 }
 .left .text1{
-    
+    animation-name: cloud;
+    animation-delay: 2.5s;
+    animation-duration: 1s;
 }
 .right{
     /* display: flex;
@@ -74,6 +85,19 @@
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
+.cloud{
+    opacity: 0;
+    animation-name: cloud;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-delay: 1.5s;
+    z-index: 1000;
+}
+
+.cloud img{
+    opacity: 1 !important;
+}
+
 @keyframes up {
     0%{
         opacity: 0;
@@ -82,5 +106,27 @@
     100%{
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes cloud {
+    0%{
+        opacity: 0;
+        transform: translateY(-30%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes leftright {
+    0%{
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0%);
+        /* 원래자리로 */
+        opacity: 1;
     }
 }
